--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -386,6 +386,7 @@
     "    if outcome == \"continuous\":\n",
     "        py_2 = r\"\"\"\n",
     "def sim_based_on_abide_continuous(pair):\n",
+    "    global abide_original, abide_name_original\n",
     "    abide, abide_name = abide_original.copy(), abide_name_original.copy()\n",
     "    _num_true_vars, _seed = pair\n",
     "    SNR = 3.\n",
@@ -425,18 +426,15 @@
     "\n",
     "    print(\"Our developed FFT-based MI calculation:\")\n",
     "\n",
-    "    try:\n",
-    "        mi_output = mi.continuous_screening_dataframe_parallel(\n",
-    "            dataframe=abide,\n",
-    "            _usecols=[\"outcome\"] + abide_name,\n",
-    "            multp=10,\n",
-    "            core_num=32,\n",
-    "            share_memory=False,\n",
-    "            kernel=\"epa\",\n",
-    "            bw=\"ISJ\",\n",
-    "            norm=2)\n",
-    "    except:\n",
-    "        print(\"The kernel-bw combination reports an error.\")\n",
+    "    mi_output = mi.continuous_screening_dataframe_parallel(\n",
+    "        dataframe=abide,\n",
+    "        _usecols=[\"outcome\"] + abide_name,\n",
+    "        multp=10,\n",
+    "        core_num=32,\n",
+    "        share_memory=False,\n",
+    "        kernel=\"epa\",\n",
+    "        bw=\"ISJ\",\n",
+    "        norm=2)\n",
     "\n",
     "    print(\"sklearn MI calculation:\")\n",
     "\n",
@@ -473,6 +471,9 @@
     "    pearson_sensitivity = len(set(pearson_selection)) + len(\n",
     "        set(true_names)) - len(set(pearson_selection + true_names))\n",
     "    pearson_sensitivity = pearson_sensitivity / len(true_names)\n",
+    "    \n",
+    "    del mi_output, skmi_output, pearson_output, abide, abide_name, true_names, true_beta, sim_data, X_cov, true_sigma_sim, outcome, mi_selection, skmi_selection, pearson_selection\n",
+    "    \n",
     "    return np.array([mi_sensitivity, skmi_sensitivity, pearson_sensitivity])\n",
     "\n",
     "\n",
@@ -488,6 +489,7 @@
     "    elif outcome == \"binary\":\n",
     "        py_2 = r\"\"\"\n",
     "def sim_based_on_abide_binary(pair):\n",
+    "    global abide_original, abide_name_original\n",
     "    abide, abide_name = abide_original.copy(), abide_name_original.copy()\n",
     "    _num_true_vars, _seed = pair\n",
     "    SNR = 3.\n",
@@ -516,17 +518,14 @@
     "\n",
     "    print(\"Our developed FFT-based MI calculation:\")\n",
     "\n",
-    "    try:\n",
-    "        mi_output = mi.binary_screening_dataframe_parallel(\n",
-    "            dataframe=abide,\n",
-    "            _usecols=[\"outcome\"] + abide_name,\n",
-    "            multp=10,\n",
-    "            core_num=32,\n",
-    "            share_memory=False,\n",
-    "            kernel=\"epa\",\n",
-    "            bw=\"ISJ\")\n",
-    "    except:\n",
-    "        print(\"The kernel-bw combination reports an error.\")\n",
+    "    mi_output = mi.binary_screening_dataframe_parallel(\n",
+    "        dataframe=abide,\n",
+    "        _usecols=[\"outcome\"] + abide_name,\n",
+    "        multp=10,\n",
+    "        core_num=32,\n",
+    "        share_memory=False,\n",
+    "        kernel=\"epa\",\n",
+    "        bw=\"ISJ\")\n",
     "\n",
     "    print(\"sklearn MI calculation:\")\n",
     "\n",
@@ -563,6 +562,9 @@
     "    pearson_sensitivity = len(set(pearson_selection)) + len(\n",
     "        set(true_names)) - len(set(pearson_selection + true_names))\n",
     "    pearson_sensitivity = pearson_sensitivity / len(true_names)\n",
+    "    \n",
+    "    del mi_output, skmi_output, pearson_output, abide, abide_name, true_names, true_beta, sim_data, X_cov, true_sigma_sim, outcome, mi_selection, skmi_selection, pearson_selection\n",
+    "    \n",
     "    return np.array([mi_sensitivity, skmi_sensitivity, pearson_sensitivity])\n",
     "\n",
     "\n",
@@ -2721,7 +2723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
