--- a/paper/ABIDE_data_analysis/ABIDE_PCA/ABIDE_PCA_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_PCA/ABIDE_PCA_analysis.ipynb
@@ -336,7 +336,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -546,7 +546,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -883,7 +883,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -1588,7 +1588,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -1932,7 +1932,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
