--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -283,7 +283,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# # Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -626,7 +626,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# # Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -816,7 +816,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# # Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -965,7 +965,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# # Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -1302,7 +1302,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# # Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -2007,7 +2007,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# # Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
@@ -2351,7 +2351,7 @@
     "# pip wheel fastHDMI --no-deps\n",
     "\n",
     "# # Here basically to build the packages at login node and install them in slurm job submission locally\n",
-    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 Cython\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
     "pip install --no-index /home/kyang/KDEpy-1.1.1+computecanada-cp38-cp38-linux_x86_64.whl\n",
     "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
     "pip install --no-index /home/kyang/fastHDMI-1.23.3-cp38-cp38-linux_x86_64.whl\n",
