--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:07.314904Z",
-     "start_time": "2023-04-20T05:51:00.124980Z"
+     "end_time": "2023-04-20T17:16:15.631641Z",
+     "start_time": "2023-04-20T17:16:10.429824Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:07.341312Z",
-     "start_time": "2023-04-20T05:51:07.316275Z"
+     "end_time": "2023-04-20T17:16:15.686696Z",
+     "start_time": "2023-04-20T17:16:15.637864Z"
     }
    },
    "outputs": [],
@@ -310,8 +310,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:07.344288Z",
-     "start_time": "2023-04-20T05:51:07.342117Z"
+     "end_time": "2023-04-20T17:16:15.690627Z",
+     "start_time": "2023-04-20T17:16:15.688387Z"
     }
    },
    "outputs": [],
@@ -337,8 +337,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:07.388000Z",
-     "start_time": "2023-04-20T05:51:07.345773Z"
+     "end_time": "2023-04-20T17:16:15.752268Z",
+     "start_time": "2023-04-20T17:16:15.692125Z"
     }
    },
    "outputs": [],
@@ -562,7 +562,7 @@
     "        set(true_names)) - len(set(pearson_selection + true_names))\n",
     "    pearson_sensitivity = pearson_sensitivity / len(true_names)\n",
     "    \n",
-    "    del mi_output, skmi_output, pearson_output, abide, abide_name, true_names, true_beta, sim_data, X_cov, true_sigma_sim, outcome, mi_selection, skmi_selection, pearson_selection\n",
+    "    del mi_output, skmi_output, pearson_output, abide, abide_name, true_names, true_beta, sim_data, true_sigma_sim, outcome, mi_selection, skmi_selection, pearson_selection\n",
     "    \n",
     "    return np.array([mi_sensitivity, skmi_sensitivity, pearson_sensitivity])\n",
     "\n",
@@ -666,8 +666,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:07.392105Z",
-     "start_time": "2023-04-20T05:51:07.389191Z"
+     "end_time": "2023-04-20T17:16:15.766806Z",
+     "start_time": "2023-04-20T17:16:15.763708Z"
     }
    },
    "outputs": [],
@@ -717,8 +717,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:07.396377Z",
-     "start_time": "2023-04-20T05:51:07.393542Z"
+     "end_time": "2023-04-20T17:16:15.770626Z",
+     "start_time": "2023-04-20T17:16:15.768246Z"
     }
    },
    "outputs": [],
@@ -767,8 +767,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:07.406303Z",
-     "start_time": "2023-04-20T05:51:07.399306Z"
+     "end_time": "2023-04-20T17:16:15.785551Z",
+     "start_time": "2023-04-20T17:16:15.773471Z"
     }
    },
    "outputs": [],
@@ -912,8 +912,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:08.125447Z",
-     "start_time": "2023-04-20T05:51:07.407300Z"
+     "end_time": "2023-04-20T17:16:16.951185Z",
+     "start_time": "2023-04-20T17:16:15.786685Z"
     }
    },
    "outputs": [],
@@ -1223,8 +1223,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:08.131732Z",
-     "start_time": "2023-04-20T05:51:08.127877Z"
+     "end_time": "2023-04-20T17:16:16.955857Z",
+     "start_time": "2023-04-20T17:16:16.953377Z"
     }
    },
    "outputs": [],
@@ -1249,8 +1249,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:08.773914Z",
-     "start_time": "2023-04-20T05:51:08.137696Z"
+     "end_time": "2023-04-20T17:16:18.138563Z",
+     "start_time": "2023-04-20T17:16:16.958857Z"
     }
    },
    "outputs": [],
@@ -1565,8 +1565,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:08.776683Z",
-     "start_time": "2023-04-20T05:51:08.775138Z"
+     "end_time": "2023-04-20T17:16:18.150117Z",
+     "start_time": "2023-04-20T17:16:18.146365Z"
     }
    },
    "outputs": [],
@@ -1593,8 +1593,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:08.902979Z",
-     "start_time": "2023-04-20T05:51:08.777531Z"
+     "end_time": "2023-04-20T17:16:18.358237Z",
+     "start_time": "2023-04-20T17:16:18.153308Z"
     }
    },
    "outputs": [
@@ -1770,8 +1770,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:09.013162Z",
-     "start_time": "2023-04-20T05:51:08.904345Z"
+     "end_time": "2023-04-20T17:16:18.435963Z",
+     "start_time": "2023-04-20T17:16:18.359049Z"
     }
    },
    "outputs": [
@@ -1954,8 +1954,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:09.601067Z",
-     "start_time": "2023-04-20T05:51:09.014413Z"
+     "end_time": "2023-04-20T17:16:19.515229Z",
+     "start_time": "2023-04-20T17:16:18.436695Z"
     }
    },
    "outputs": [],
@@ -2267,8 +2267,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:09.605512Z",
-     "start_time": "2023-04-20T05:51:09.603248Z"
+     "end_time": "2023-04-20T17:16:19.523639Z",
+     "start_time": "2023-04-20T17:16:19.519094Z"
     }
    },
    "outputs": [],
@@ -2298,8 +2298,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:51:10.089817Z",
-     "start_time": "2023-04-20T05:51:09.607608Z"
+     "end_time": "2023-04-20T17:16:20.481455Z",
+     "start_time": "2023-04-20T17:16:19.528162Z"
     }
    },
    "outputs": [],
@@ -2616,8 +2616,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:56:55.967758Z",
-     "start_time": "2023-04-20T05:51:10.093438Z"
+     "end_time": "2023-04-20T17:22:11.404064Z",
+     "start_time": "2023-04-20T17:16:20.485954Z"
     }
    },
    "outputs": [],
@@ -2644,8 +2644,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:56:56.044802Z",
-     "start_time": "2023-04-20T05:56:55.970113Z"
+     "end_time": "2023-04-20T17:22:11.480780Z",
+     "start_time": "2023-04-20T17:22:11.406670Z"
     }
    },
    "outputs": [
@@ -2805,8 +2805,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T05:56:56.106260Z",
-     "start_time": "2023-04-20T05:56:56.045658Z"
+     "end_time": "2023-04-20T17:22:11.542972Z",
+     "start_time": "2023-04-20T17:22:11.481589Z"
     }
    },
    "outputs": [
@@ -2978,7 +2978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
