--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:15.631641Z",
-     "start_time": "2023-04-20T17:16:10.429824Z"
+     "end_time": "2023-04-21T03:41:47.591212Z",
+     "start_time": "2023-04-21T03:41:38.823065Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:15.686696Z",
-     "start_time": "2023-04-20T17:16:15.637864Z"
+     "end_time": "2023-04-21T03:41:47.640127Z",
+     "start_time": "2023-04-21T03:41:47.596353Z"
     }
    },
    "outputs": [],
@@ -310,8 +310,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:15.690627Z",
-     "start_time": "2023-04-20T17:16:15.688387Z"
+     "end_time": "2023-04-21T03:41:47.643829Z",
+     "start_time": "2023-04-21T03:41:47.641738Z"
     }
    },
    "outputs": [],
@@ -337,8 +337,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:15.752268Z",
-     "start_time": "2023-04-20T17:16:15.692125Z"
+     "end_time": "2023-04-21T03:41:47.707024Z",
+     "start_time": "2023-04-21T03:41:47.645315Z"
     }
    },
    "outputs": [],
@@ -562,7 +562,7 @@
     "        set(true_names)) - len(set(pearson_selection + true_names))\n",
     "    pearson_sensitivity = pearson_sensitivity / len(true_names)\n",
     "    \n",
-    "    del mi_output, skmi_output, pearson_output, abide, abide_name, true_names, true_beta, sim_data, true_sigma_sim, outcome, mi_selection, skmi_selection, pearson_selection\n",
+    "    del mi_output, skmi_output, pearson_output, abide, abide_name, true_names, true_beta, sim_data, signal, outcome, mi_selection, skmi_selection, pearson_selection\n",
     "    \n",
     "    return np.array([mi_sensitivity, skmi_sensitivity, pearson_sensitivity])\n",
     "\n",
@@ -666,8 +666,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:15.766806Z",
-     "start_time": "2023-04-20T17:16:15.763708Z"
+     "end_time": "2023-04-21T03:41:47.711872Z",
+     "start_time": "2023-04-21T03:41:47.708457Z"
     }
    },
    "outputs": [],
@@ -717,8 +717,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:15.770626Z",
-     "start_time": "2023-04-20T17:16:15.768246Z"
+     "end_time": "2023-04-21T03:41:47.715451Z",
+     "start_time": "2023-04-21T03:41:47.713124Z"
     }
    },
    "outputs": [],
@@ -767,8 +767,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:15.785551Z",
-     "start_time": "2023-04-20T17:16:15.773471Z"
+     "end_time": "2023-04-21T03:41:47.723186Z",
+     "start_time": "2023-04-21T03:41:47.716507Z"
     }
    },
    "outputs": [],
@@ -912,8 +912,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:16.951185Z",
-     "start_time": "2023-04-20T17:16:15.786685Z"
+     "end_time": "2023-04-21T03:41:48.652915Z",
+     "start_time": "2023-04-21T03:41:47.724286Z"
     }
    },
    "outputs": [],
@@ -1223,8 +1223,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:16.955857Z",
-     "start_time": "2023-04-20T17:16:16.953377Z"
+     "end_time": "2023-04-21T03:41:48.661469Z",
+     "start_time": "2023-04-21T03:41:48.657233Z"
     }
    },
    "outputs": [],
@@ -1249,8 +1249,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:18.138563Z",
-     "start_time": "2023-04-20T17:16:16.958857Z"
+     "end_time": "2023-04-21T03:41:49.758927Z",
+     "start_time": "2023-04-21T03:41:48.664884Z"
     }
    },
    "outputs": [],
@@ -1565,8 +1565,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:18.150117Z",
-     "start_time": "2023-04-20T17:16:18.146365Z"
+     "end_time": "2023-04-21T03:41:49.777332Z",
+     "start_time": "2023-04-21T03:41:49.775359Z"
     }
    },
    "outputs": [],
@@ -1593,8 +1593,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:18.358237Z",
-     "start_time": "2023-04-20T17:16:18.153308Z"
+     "end_time": "2023-04-21T03:41:49.993443Z",
+     "start_time": "2023-04-21T03:41:49.778619Z"
     }
    },
    "outputs": [
@@ -1770,8 +1770,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:18.435963Z",
-     "start_time": "2023-04-20T17:16:18.359049Z"
+     "end_time": "2023-04-21T03:41:50.070344Z",
+     "start_time": "2023-04-21T03:41:49.994281Z"
     }
    },
    "outputs": [
@@ -1954,8 +1954,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:19.515229Z",
-     "start_time": "2023-04-20T17:16:18.436695Z"
+     "end_time": "2023-04-21T03:41:51.012341Z",
+     "start_time": "2023-04-21T03:41:50.071181Z"
     }
    },
    "outputs": [],
@@ -2267,8 +2267,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:19.523639Z",
-     "start_time": "2023-04-20T17:16:19.519094Z"
+     "end_time": "2023-04-21T03:41:51.019881Z",
+     "start_time": "2023-04-21T03:41:51.015047Z"
     }
    },
    "outputs": [],
@@ -2298,8 +2298,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:16:20.481455Z",
-     "start_time": "2023-04-20T17:16:19.528162Z"
+     "end_time": "2023-04-21T03:41:51.933368Z",
+     "start_time": "2023-04-21T03:41:51.022318Z"
     }
    },
    "outputs": [],
@@ -2616,8 +2616,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:22:11.404064Z",
-     "start_time": "2023-04-20T17:16:20.485954Z"
+     "end_time": "2023-04-21T03:47:37.415758Z",
+     "start_time": "2023-04-21T03:41:51.935423Z"
     }
    },
    "outputs": [],
@@ -2644,8 +2644,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:22:11.480780Z",
-     "start_time": "2023-04-20T17:22:11.406670Z"
+     "end_time": "2023-04-21T03:47:37.501783Z",
+     "start_time": "2023-04-21T03:47:37.417937Z"
     }
    },
    "outputs": [
@@ -2805,8 +2805,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-20T17:22:11.542972Z",
-     "start_time": "2023-04-20T17:22:11.481589Z"
+     "end_time": "2023-04-21T03:47:37.574643Z",
+     "start_time": "2023-04-21T03:47:37.503345Z"
     }
    },
    "outputs": [
