--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:47.591212Z",
-     "start_time": "2023-04-21T03:41:38.823065Z"
+     "end_time": "2023-04-22T20:24:44.431515Z",
+     "start_time": "2023-04-22T20:24:43.118615Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:47.640127Z",
-     "start_time": "2023-04-21T03:41:47.596353Z"
+     "end_time": "2023-04-22T20:24:44.472685Z",
+     "start_time": "2023-04-22T20:24:44.433295Z"
     }
    },
    "outputs": [],
@@ -310,8 +310,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:47.643829Z",
-     "start_time": "2023-04-21T03:41:47.641738Z"
+     "end_time": "2023-04-22T20:24:44.474977Z",
+     "start_time": "2023-04-22T20:24:44.473639Z"
     }
    },
    "outputs": [],
@@ -337,8 +337,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:47.707024Z",
-     "start_time": "2023-04-21T03:41:47.645315Z"
+     "end_time": "2023-04-22T20:24:44.537789Z",
+     "start_time": "2023-04-22T20:24:44.475972Z"
     }
    },
    "outputs": [],
@@ -483,7 +483,7 @@
     "\n",
     "output_array = np.array(list(map(sim_based_on_abide_continuous, tqdm(itrs))))\n",
     "output_array = output_array.reshape(1, 100, 3).squeeze()\n",
-    "np.save(r\"./ABIDE_simulations/ABIDE_sim_continuous_{_num_true_vars_iter}\", output_array)\n",
+    "np.save(r\"./ABIDE_sim_continuous_{_num_true_vars_iter}\", output_array)\n",
     "\"\"\".format(_num_true_vars_iter=num_true_vars_iter)\n",
     "    elif outcome == \"binary\":\n",
     "        py_2 = r\"\"\"\n",
@@ -574,7 +574,7 @@
     "\n",
     "output_array = np.array(list(map(sim_based_on_abide_binary, tqdm(itrs))))\n",
     "output_array = output_array.reshape(1, 100, 3).squeeze()\n",
-    "np.save(r\"./ABIDE_simulations/ABIDE_sim_binary_{_num_true_vars_iter}\", output_array)\n",
+    "np.save(r\"./ABIDE_sim_binary_{_num_true_vars_iter}\", output_array)\n",
     "\"\"\".format(_num_true_vars_iter=num_true_vars_iter)\n",
     "\n",
     "    Path(r\"./ABIDE_simulations/ABIDE_sim_\" + outcome +\n",
@@ -666,8 +666,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:47.711872Z",
-     "start_time": "2023-04-21T03:41:47.708457Z"
+     "end_time": "2023-04-22T20:24:44.540804Z",
+     "start_time": "2023-04-22T20:24:44.538838Z"
     }
    },
    "outputs": [],
@@ -717,8 +717,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:47.715451Z",
-     "start_time": "2023-04-21T03:41:47.713124Z"
+     "end_time": "2023-04-22T20:24:44.543554Z",
+     "start_time": "2023-04-22T20:24:44.541723Z"
     }
    },
    "outputs": [],
@@ -767,8 +767,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:47.723186Z",
-     "start_time": "2023-04-21T03:41:47.716507Z"
+     "end_time": "2023-04-22T20:24:44.571493Z",
+     "start_time": "2023-04-22T20:24:44.544756Z"
     }
    },
    "outputs": [],
@@ -912,8 +912,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:48.652915Z",
-     "start_time": "2023-04-21T03:41:47.724286Z"
+     "end_time": "2023-04-22T20:24:45.609982Z",
+     "start_time": "2023-04-22T20:24:44.572750Z"
     }
    },
    "outputs": [],
@@ -1223,8 +1223,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:48.661469Z",
-     "start_time": "2023-04-21T03:41:48.657233Z"
+     "end_time": "2023-04-22T20:24:45.616584Z",
+     "start_time": "2023-04-22T20:24:45.613375Z"
     }
    },
    "outputs": [],
@@ -1249,8 +1249,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:49.758927Z",
-     "start_time": "2023-04-21T03:41:48.664884Z"
+     "end_time": "2023-04-22T20:24:46.806009Z",
+     "start_time": "2023-04-22T20:24:45.619329Z"
     }
    },
    "outputs": [],
@@ -1565,8 +1565,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:49.777332Z",
-     "start_time": "2023-04-21T03:41:49.775359Z"
+     "end_time": "2023-04-22T20:24:46.815471Z",
+     "start_time": "2023-04-22T20:24:46.812335Z"
     }
    },
    "outputs": [],
@@ -1593,8 +1593,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:49.993443Z",
-     "start_time": "2023-04-21T03:41:49.778619Z"
+     "end_time": "2023-04-22T20:24:46.954552Z",
+     "start_time": "2023-04-22T20:24:46.821098Z"
     }
    },
    "outputs": [
@@ -1770,8 +1770,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:50.070344Z",
-     "start_time": "2023-04-21T03:41:49.994281Z"
+     "end_time": "2023-04-22T20:24:47.055264Z",
+     "start_time": "2023-04-22T20:24:46.956830Z"
     }
    },
    "outputs": [
@@ -1954,8 +1954,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:51.012341Z",
-     "start_time": "2023-04-21T03:41:50.071181Z"
+     "end_time": "2023-04-22T20:24:47.827288Z",
+     "start_time": "2023-04-22T20:24:47.056255Z"
     }
    },
    "outputs": [],
@@ -2267,8 +2267,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:51.019881Z",
-     "start_time": "2023-04-21T03:41:51.015047Z"
+     "end_time": "2023-04-22T20:24:47.837448Z",
+     "start_time": "2023-04-22T20:24:47.833805Z"
     }
    },
    "outputs": [],
@@ -2298,8 +2298,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:41:51.933368Z",
-     "start_time": "2023-04-21T03:41:51.022318Z"
+     "end_time": "2023-04-22T20:24:48.731743Z",
+     "start_time": "2023-04-22T20:24:47.839936Z"
     }
    },
    "outputs": [],
@@ -2616,8 +2616,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:47:37.415758Z",
-     "start_time": "2023-04-21T03:41:51.935423Z"
+     "end_time": "2023-04-22T20:30:29.357773Z",
+     "start_time": "2023-04-22T20:24:48.735030Z"
     }
    },
    "outputs": [],
@@ -2644,8 +2644,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:47:37.501783Z",
-     "start_time": "2023-04-21T03:47:37.417937Z"
+     "end_time": "2023-04-22T20:30:29.443627Z",
+     "start_time": "2023-04-22T20:30:29.360072Z"
     }
    },
    "outputs": [
@@ -2805,8 +2805,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T03:47:37.574643Z",
-     "start_time": "2023-04-21T03:47:37.503345Z"
+     "end_time": "2023-04-22T20:30:29.515500Z",
+     "start_time": "2023-04-22T20:30:29.444669Z"
     }
    },
    "outputs": [
