--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:27.617682Z",
-     "start_time": "2023-04-24T05:07:26.508640Z"
+     "end_time": "2023-04-24T20:45:47.613912Z",
+     "start_time": "2023-04-24T20:45:36.840869Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:28.025641Z",
-     "start_time": "2023-04-24T05:07:27.619721Z"
+     "end_time": "2023-04-24T20:45:47.719572Z",
+     "start_time": "2023-04-24T20:45:47.619197Z"
     }
    },
    "outputs": [],
@@ -112,7 +112,7 @@
     "\n",
     "    sim_data = abide[true_names].to_numpy(copy=True)\n",
     "    sim_data = StandardScaler(copy=False).fit_transform(sim_data)\n",
-    "    sim_data = sim_data ** 2\n",
+    "    sim_data = sim_data**2\n",
     "    sim_data = StandardScaler(copy=False).fit_transform(sim_data)\n",
     "\n",
     "    X_cov = np.corrcoef(sim_data, rowvar=False)\n",
@@ -128,15 +128,26 @@
     "\n",
     "    print(\"Our developed FFT-based MI calculation:\")\n",
     "\n",
-    "    mi_output = mi.continuous_screening_dataframe_parallel(\n",
-    "        dataframe=abide,\n",
-    "        _usecols=[\"outcome\"] + abide_name,\n",
-    "        multp=10,\n",
-    "        core_num=32,\n",
-    "        share_memory=False,\n",
-    "        kernel=\"epa\",\n",
-    "        bw=\"ISJ\",\n",
-    "        norm=2)\n",
+    "    try:\n",
+    "        mi_output = mi.continuous_screening_dataframe_parallel(\n",
+    "            dataframe=abide,\n",
+    "            _usecols=[\"outcome\"] + abide_name,\n",
+    "            multp=10,\n",
+    "            core_num=32,\n",
+    "            share_memory=False,\n",
+    "            kernel=\"epa\",\n",
+    "            bw=\"ISJ\",\n",
+    "            norm=2)\n",
+    "    except:\n",
+    "        mi_output = mi.continuous_screening_dataframe_parallel(\n",
+    "            dataframe=abide,\n",
+    "            _usecols=[\"outcome\"] + abide_name,\n",
+    "            multp=10,\n",
+    "            core_num=32,\n",
+    "            share_memory=False,\n",
+    "            kernel=\"epa\",\n",
+    "            bw=\"silverman\",\n",
+    "            norm=2)\n",
     "\n",
     "    print(\"sklearn MI calculation:\")\n",
     "\n",
@@ -157,11 +168,14 @@
     "        core_num=32,\n",
     "        share_memory=False)\n",
     "\n",
-    "    mi_selection = np.asarray(abide_name)[np.argsort(-mi_output)][:num_true_vars]\n",
+    "    mi_selection = np.asarray(abide_name)[np.argsort(\n",
+    "        -mi_output)][:num_true_vars]\n",
     "    mi_selection = convert2list(mi_selection)\n",
-    "    skmi_selection = np.asarray(abide_name)[np.argsort(-skmi_output)][:num_true_vars]\n",
+    "    skmi_selection = np.asarray(abide_name)[np.argsort(\n",
+    "        -skmi_output)][:num_true_vars]\n",
     "    skmi_selection = convert2list(skmi_selection)\n",
-    "    pearson_selection = np.asarray(abide_name)[np.argsort(-pearson_output)][:num_true_vars]\n",
+    "    pearson_selection = np.asarray(abide_name)[np.argsort(\n",
+    "        -pearson_output)][:num_true_vars]\n",
     "    pearson_selection = convert2list(pearson_selection)\n",
     "\n",
     "    mi_sensitivity = len(set(mi_selection)) + len(set(true_names)) - len(\n",
@@ -173,9 +187,9 @@
     "    pearson_sensitivity = len(set(pearson_selection)) + len(\n",
     "        set(true_names)) - len(set(pearson_selection + true_names))\n",
     "    pearson_sensitivity = pearson_sensitivity / len(true_names)\n",
-    "    \n",
+    "\n",
     "    del mi_output, skmi_output, pearson_output, abide, abide_name, true_names, true_beta, sim_data, X_cov, true_sigma_sim, outcome, mi_selection, skmi_selection, pearson_selection\n",
-    "    \n",
+    "\n",
     "    return np.array([mi_sensitivity, skmi_sensitivity, pearson_sensitivity])\n",
     "\n",
     "\n",
@@ -209,8 +223,10 @@
     "    sim_data = abide[true_names].to_numpy(copy=True)\n",
     "    sim_data = StandardScaler(copy=False).fit_transform(sim_data)\n",
     "    signal = sim_data @ true_beta\n",
-    "    signal -= np.mean(signal) # make sure it's centered at 0 to avoid generated data all be in one class \n",
-    "    signal /= np.std(signal) # avoid the case if the data is too centered\n",
+    "    signal -= np.mean(\n",
+    "        signal\n",
+    "    )  # make sure it's centered at 0 to avoid generated data all be in one class\n",
+    "    signal /= np.std(signal)  # avoid the case if the data is too centered\n",
     "\n",
     "    outcome = np.random.binomial(1, np.tanh(signal / 2) / 2 + .5)\n",
     "\n",
@@ -221,14 +237,24 @@
     "\n",
     "    print(\"Our developed FFT-based MI calculation:\")\n",
     "\n",
-    "    mi_output = mi.binary_screening_dataframe_parallel(\n",
-    "        dataframe=abide,\n",
-    "        _usecols=[\"outcome\"] + abide_name,\n",
-    "        multp=10,\n",
-    "        core_num=32,\n",
-    "        share_memory=False,\n",
-    "        kernel=\"epa\",\n",
-    "        bw=\"ISJ\")\n",
+    "    try:\n",
+    "        mi_output = mi.binary_screening_dataframe_parallel(\n",
+    "            dataframe=abide,\n",
+    "            _usecols=[\"outcome\"] + abide_name,\n",
+    "            multp=10,\n",
+    "            core_num=32,\n",
+    "            share_memory=False,\n",
+    "            kernel=\"epa\",\n",
+    "            bw=\"ISJ\")\n",
+    "    except:\n",
+    "        mi_output = mi.binary_screening_dataframe_parallel(\n",
+    "            dataframe=abide,\n",
+    "            _usecols=[\"outcome\"] + abide_name,\n",
+    "            multp=10,\n",
+    "            core_num=32,\n",
+    "            share_memory=False,\n",
+    "            kernel=\"epa\",\n",
+    "            bw=\"silverman\")\n",
     "\n",
     "    print(\"sklearn MI calculation:\")\n",
     "\n",
@@ -249,11 +275,14 @@
     "        core_num=32,\n",
     "        share_memory=False)\n",
     "\n",
-    "    mi_selection = np.asarray(abide_name)[np.argsort(-mi_output)][:num_true_vars]\n",
+    "    mi_selection = np.asarray(abide_name)[np.argsort(\n",
+    "        -mi_output)][:num_true_vars]\n",
     "    mi_selection = convert2list(mi_selection)\n",
-    "    skmi_selection = np.asarray(abide_name)[np.argsort(-skmi_output)][:num_true_vars]\n",
+    "    skmi_selection = np.asarray(abide_name)[np.argsort(\n",
+    "        -skmi_output)][:num_true_vars]\n",
     "    skmi_selection = convert2list(skmi_selection)\n",
-    "    pearson_selection = np.asarray(abide_name)[np.argsort(-pearson_output)][:num_true_vars]\n",
+    "    pearson_selection = np.asarray(abide_name)[np.argsort(\n",
+    "        -pearson_output)][:num_true_vars]\n",
     "    pearson_selection = convert2list(pearson_selection)\n",
     "\n",
     "    mi_sensitivity = len(set(mi_selection)) + len(set(true_names)) - len(\n",
@@ -265,9 +294,9 @@
     "    pearson_sensitivity = len(set(pearson_selection)) + len(\n",
     "        set(true_names)) - len(set(pearson_selection + true_names))\n",
     "    pearson_sensitivity = pearson_sensitivity / len(true_names)\n",
-    "    \n",
+    "\n",
     "    del mi_output, skmi_output, pearson_output, abide, abide_name, true_names, true_beta, sim_data, signal, outcome, mi_selection, skmi_selection, pearson_selection\n",
-    "    \n",
+    "\n",
     "    return np.array([mi_sensitivity, skmi_sensitivity, pearson_sensitivity])\n",
     "\n",
     "\n",
@@ -367,8 +396,8 @@
    "id": "81e6222c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:28.246326Z",
-     "start_time": "2023-04-24T05:07:28.028203Z"
+     "end_time": "2023-04-24T20:45:47.985656Z",
+     "start_time": "2023-04-24T20:45:47.723057Z"
     }
    },
    "outputs": [
@@ -485,8 +514,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:28.457815Z",
-     "start_time": "2023-04-24T05:07:28.248005Z"
+     "end_time": "2023-04-24T20:45:48.017285Z",
+     "start_time": "2023-04-24T20:45:47.986404Z"
     }
    },
    "outputs": [],
@@ -750,8 +779,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:28.460936Z",
-     "start_time": "2023-04-24T05:07:28.458976Z"
+     "end_time": "2023-04-24T20:45:48.019476Z",
+     "start_time": "2023-04-24T20:45:48.017873Z"
     }
    },
    "outputs": [],
@@ -779,8 +808,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:28.463284Z",
-     "start_time": "2023-04-24T05:07:28.461631Z"
+     "end_time": "2023-04-24T20:45:48.021788Z",
+     "start_time": "2023-04-24T20:45:48.020099Z"
     }
    },
    "outputs": [],
@@ -830,8 +859,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:28.466260Z",
-     "start_time": "2023-04-24T05:07:28.463978Z"
+     "end_time": "2023-04-24T20:45:48.024114Z",
+     "start_time": "2023-04-24T20:45:48.022470Z"
     }
    },
    "outputs": [],
@@ -880,8 +909,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:28.506519Z",
-     "start_time": "2023-04-24T05:07:28.467079Z"
+     "end_time": "2023-04-24T20:45:48.035361Z",
+     "start_time": "2023-04-24T20:45:48.024751Z"
     }
    },
    "outputs": [],
@@ -1025,8 +1054,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:36.149697Z",
-     "start_time": "2023-04-24T05:07:28.507592Z"
+     "end_time": "2023-04-24T20:45:49.415724Z",
+     "start_time": "2023-04-24T20:45:48.036110Z"
     }
    },
    "outputs": [],
@@ -1336,8 +1365,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:36.157367Z",
-     "start_time": "2023-04-24T05:07:36.153279Z"
+     "end_time": "2023-04-24T20:45:49.423335Z",
+     "start_time": "2023-04-24T20:45:49.420944Z"
     }
    },
    "outputs": [],
@@ -1362,8 +1391,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:43.742877Z",
-     "start_time": "2023-04-24T05:07:36.163586Z"
+     "end_time": "2023-04-24T20:45:50.778847Z",
+     "start_time": "2023-04-24T20:45:49.426786Z"
     }
    },
    "outputs": [],
@@ -1678,8 +1707,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:43.751140Z",
-     "start_time": "2023-04-24T05:07:43.746877Z"
+     "end_time": "2023-04-24T20:45:50.786357Z",
+     "start_time": "2023-04-24T20:45:50.782701Z"
     }
    },
    "outputs": [],
@@ -1706,8 +1735,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:43.930854Z",
-     "start_time": "2023-04-24T05:07:43.753625Z"
+     "end_time": "2023-04-24T20:45:50.905257Z",
+     "start_time": "2023-04-24T20:45:50.789208Z"
     }
    },
    "outputs": [
@@ -1883,8 +1912,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:44.070249Z",
-     "start_time": "2023-04-24T05:07:43.931782Z"
+     "end_time": "2023-04-24T20:45:50.998558Z",
+     "start_time": "2023-04-24T20:45:50.906141Z"
     }
    },
    "outputs": [
@@ -2067,8 +2096,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:49.929781Z",
-     "start_time": "2023-04-24T05:07:44.071527Z"
+     "end_time": "2023-04-24T20:45:52.072516Z",
+     "start_time": "2023-04-24T20:45:50.999447Z"
     }
    },
    "outputs": [],
@@ -2380,8 +2409,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:49.937769Z",
-     "start_time": "2023-04-24T05:07:49.933999Z"
+     "end_time": "2023-04-24T20:45:52.077397Z",
+     "start_time": "2023-04-24T20:45:52.074768Z"
     }
    },
    "outputs": [],
@@ -2411,8 +2440,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:07:55.702491Z",
-     "start_time": "2023-04-24T05:07:49.940496Z"
+     "end_time": "2023-04-24T20:45:52.987012Z",
+     "start_time": "2023-04-24T20:45:52.080095Z"
     }
    },
    "outputs": [],
@@ -2729,8 +2758,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:14:56.643513Z",
-     "start_time": "2023-04-24T05:07:55.706171Z"
+     "end_time": "2023-04-24T20:51:38.461781Z",
+     "start_time": "2023-04-24T20:45:52.988890Z"
     }
    },
    "outputs": [],
@@ -2757,8 +2786,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:14:56.778386Z",
-     "start_time": "2023-04-24T05:14:56.645813Z"
+     "end_time": "2023-04-24T20:51:38.549366Z",
+     "start_time": "2023-04-24T20:51:38.464261Z"
     }
    },
    "outputs": [
@@ -2918,8 +2947,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-24T05:14:56.894009Z",
-     "start_time": "2023-04-24T05:14:56.780598Z"
+     "end_time": "2023-04-24T20:51:38.624991Z",
+     "start_time": "2023-04-24T20:51:38.550350Z"
     }
    },
    "outputs": [
