--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4b753056",
+   "metadata": {},
+   "source": [
+    "# Case and Simulation studies based on ABIDE data\n",
+    "## Kai Yang\n",
+    "## Questions? [email me at: kai.yang2@mail.mcgill.ca](mailto:kai.yang2@mail.mcgill.ca)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
@@ -37,7 +47,7 @@
    "source": [
     "# Simulation study for continuous and binary outcome based on ABIDE data, and testing the screening performance for all three methods\n",
     "\n",
-    "## creating job submission scripts"
+    "## creating job submission scripts for simulation study"
    ]
   },
   {
@@ -3098,7 +3108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
