--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -16,8 +16,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:00.774294Z",
-     "start_time": "2023-05-26T22:15:59.933847Z"
+     "end_time": "2023-05-27T02:19:29.158822Z",
+     "start_time": "2023-05-27T02:19:28.328220Z"
     }
    },
    "outputs": [],
@@ -56,8 +56,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:00.782709Z",
-     "start_time": "2023-05-26T22:16:00.775584Z"
+     "end_time": "2023-05-27T02:19:29.176479Z",
+     "start_time": "2023-05-27T02:19:29.160358Z"
     }
    },
    "outputs": [],
@@ -118,7 +118,7 @@
     "    true_attr_index = np.random.choice(true_attr_index,\n",
     "                                       num_true_vars,\n",
     "                                       replace=False)\n",
-    "    true_names = abide_name[true_attr_index]  # this is a list for true names\n",
+    "    true_names = np.take(abide_name, true_attr_index) # this is a list for true names\n",
     "    true_names = convert2list(true_names)\n",
     "    true_attr_label[\n",
     "        true_attr_index] = 1  # true_attr_label is binary indicate whether the covaraite is \"true\"\n",
@@ -223,7 +223,7 @@
     "    true_attr_index = np.random.choice(true_attr_index,\n",
     "                                       num_true_vars,\n",
     "                                       replace=False)\n",
-    "    true_names = abide_name[true_attr_index]  # this is a list for true names\n",
+    "    true_names = np.take(abide_name, true_attr_index)  # this is a list for true names\n",
     "    true_names = convert2list(true_names)\n",
     "    true_attr_label[\n",
     "        true_attr_index] = 1  # true_attr_label is binary indicate whether the covaraite is \"true\"\n",
@@ -286,16 +286,6 @@
     "        multp=10,\n",
     "        core_num=32,\n",
     "        share_memory=False)\n",
-    "\n",
-    "    mi_selection = np.asarray(abide_name)[np.argsort(\n",
-    "        -mi_output)][:num_true_vars]\n",
-    "    mi_selection = convert2list(mi_selection)\n",
-    "    skmi_selection = np.asarray(abide_name)[np.argsort(\n",
-    "        -skmi_output)][:num_true_vars]\n",
-    "    skmi_selection = convert2list(skmi_selection)\n",
-    "    pearson_selection = np.asarray(abide_name)[np.argsort(\n",
-    "        -pearson_output)][:num_true_vars]\n",
-    "    pearson_selection = convert2list(pearson_selection)\n",
     "\n",
     "    mi_pseudo_prob = np.abs(mi_output) / np.max(np.abs(mi_output))\n",
     "    mi_auroc = roc_auc_score(true_attr_label, mi_pseudo_prob)\n",
@@ -393,6 +383,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3124fa00",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-27T02:19:29.203393Z",
+     "start_time": "2023-05-27T02:19:29.177663Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 0, 1, 1]), array([2, 3, 0]))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abide_name = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "true_attr_label = np.zeros(len(abide_name), dtype=int)\n",
+    "true_attr_index = np.arange(len(abide_name))\n",
+    "true_attr_index = np.random.choice(true_attr_index,\n",
+    "                                   3,\n",
+    "                                   replace=False)\n",
+    "true_names = np.take(abide_name, true_attr_index)  # this is a list for true names\n",
+    "true_attr_label[\n",
+    "    true_attr_index] = 1  # true_attr_label is binary indicate whether the covaraite is \"true\"\n",
+    "true_attr_label, true_attr_index"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fde5dba2",
    "metadata": {},
@@ -402,12 +427,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "81e6222c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.140145Z",
-     "start_time": "2023-05-26T22:16:00.783546Z"
+     "end_time": "2023-05-27T02:19:29.432126Z",
+     "start_time": "2023-05-27T02:19:29.206075Z"
     }
    },
    "outputs": [
@@ -520,12 +545,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.150393Z",
-     "start_time": "2023-05-26T22:16:01.141440Z"
+     "end_time": "2023-05-27T02:19:29.439445Z",
+     "start_time": "2023-05-27T02:19:29.433169Z"
     }
    },
    "outputs": [],
@@ -785,12 +810,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.174292Z",
-     "start_time": "2023-05-26T22:16:01.151502Z"
+     "end_time": "2023-05-27T02:19:29.460481Z",
+     "start_time": "2023-05-27T02:19:29.440206Z"
     }
    },
    "outputs": [],
@@ -814,12 +839,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.185191Z",
-     "start_time": "2023-05-26T22:16:01.175665Z"
+     "end_time": "2023-05-27T02:19:29.471606Z",
+     "start_time": "2023-05-27T02:19:29.462235Z"
     }
    },
    "outputs": [],
@@ -865,12 +890,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.195897Z",
-     "start_time": "2023-05-26T22:16:01.187666Z"
+     "end_time": "2023-05-27T02:19:29.482739Z",
+     "start_time": "2023-05-27T02:19:29.472927Z"
     }
    },
    "outputs": [],
@@ -915,12 +940,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.213036Z",
-     "start_time": "2023-05-26T22:16:01.197210Z"
+     "end_time": "2023-05-27T02:19:29.499156Z",
+     "start_time": "2023-05-27T02:19:29.483690Z"
     }
    },
    "outputs": [],
@@ -1060,12 +1085,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.264149Z",
-     "start_time": "2023-05-26T22:16:01.214421Z"
+     "end_time": "2023-05-27T02:19:29.539805Z",
+     "start_time": "2023-05-27T02:19:29.500415Z"
     }
    },
    "outputs": [],
@@ -1371,12 +1396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.267380Z",
-     "start_time": "2023-05-26T22:16:01.265659Z"
+     "end_time": "2023-05-27T02:19:29.542602Z",
+     "start_time": "2023-05-27T02:19:29.540706Z"
     }
    },
    "outputs": [],
@@ -1397,12 +1422,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.314316Z",
-     "start_time": "2023-05-26T22:16:01.268498Z"
+     "end_time": "2023-05-27T02:19:29.570879Z",
+     "start_time": "2023-05-27T02:19:29.543361Z"
     }
    },
    "outputs": [],
@@ -1713,12 +1738,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.317254Z",
-     "start_time": "2023-05-26T22:16:01.315576Z"
+     "end_time": "2023-05-27T02:19:29.575412Z",
+     "start_time": "2023-05-27T02:19:29.571887Z"
     }
    },
    "outputs": [],
@@ -1741,12 +1766,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.411356Z",
-     "start_time": "2023-05-26T22:16:01.318456Z"
+     "end_time": "2023-05-27T02:19:29.637483Z",
+     "start_time": "2023-05-27T02:19:29.576192Z"
     }
    },
    "outputs": [
@@ -1918,12 +1943,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.500555Z",
-     "start_time": "2023-05-26T22:16:01.412367Z"
+     "end_time": "2023-05-27T02:19:29.691445Z",
+     "start_time": "2023-05-27T02:19:29.638274Z"
     }
    },
    "outputs": [
@@ -2102,12 +2127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.535168Z",
-     "start_time": "2023-05-26T22:16:01.501839Z"
+     "end_time": "2023-05-27T02:19:29.709243Z",
+     "start_time": "2023-05-27T02:19:29.692234Z"
     }
    },
    "outputs": [],
@@ -2415,12 +2440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.538317Z",
-     "start_time": "2023-05-26T22:16:01.536422Z"
+     "end_time": "2023-05-27T02:19:29.718050Z",
+     "start_time": "2023-05-27T02:19:29.710117Z"
     }
    },
    "outputs": [],
@@ -2446,12 +2471,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:16:01.576571Z",
-     "start_time": "2023-05-26T22:16:01.539363Z"
+     "end_time": "2023-05-27T02:19:29.743030Z",
+     "start_time": "2023-05-27T02:19:29.718960Z"
     }
    },
    "outputs": [],
@@ -2764,12 +2789,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:20:13.797079Z",
-     "start_time": "2023-05-26T22:16:01.577736Z"
+     "end_time": "2023-05-27T02:23:42.183836Z",
+     "start_time": "2023-05-27T02:19:29.744009Z"
     }
    },
    "outputs": [],
@@ -2792,12 +2817,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:20:13.875326Z",
-     "start_time": "2023-05-26T22:20:13.801597Z"
+     "end_time": "2023-05-27T02:23:42.233564Z",
+     "start_time": "2023-05-27T02:23:42.187779Z"
     }
    },
    "outputs": [
@@ -2953,12 +2978,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-26T22:20:13.949509Z",
-     "start_time": "2023-05-26T22:20:13.876656Z"
+     "end_time": "2023-05-27T02:23:42.281267Z",
+     "start_time": "2023-05-27T02:23:42.234426Z"
     }
    },
    "outputs": [
